--- a/src/main/resources/view/room_info.fxml
+++ b/src/main/resources/view/room_info.fxml
@@ -7,59 +7,83 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="686.0" prefWidth="901.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RoomInfoController">
-   <children>
-      <Label alignment="CENTER" layoutX="237.0" layoutY="36.0" prefHeight="50.0" prefWidth="454.0" text="Room Information" textFill="#2c8fe6">
-         <font>
-            <Font name="System Bold" size="34.0" />
-         </font>
-      </Label>
-      <TableView fx:id="tblRoomInfo" layoutX="51.0" layoutY="120.0" prefHeight="371.0" prefWidth="822.0">
-        <columns>
-          <TableColumn fx:id="colRoomId" prefWidth="75.0" text="Room Id" />
-          <TableColumn fx:id="colType" prefWidth="93.5999984741211" text="Type" />
-            <TableColumn fx:id="colPrice" prefWidth="124.79998779296875" text="Price Per Night" />
-            <TableColumn fx:id="colGuest" prefWidth="132.79998779296875" text="Max Guest" />
-            <TableColumn fx:id="colAvailability" prefWidth="120.80001831054688" text="Availability" />
-            <TableColumn fx:id="colDescription" prefWidth="144.79998779296875" text="Description" />
-            <TableColumn fx:id="colFloor" prefWidth="131.20001220703125" text="Floor" />
-        </columns>
-      </TableView>
-      <Button layoutX="745.0" layoutY="589.0" mnemonicParsing="false" onAction="#btnReloadOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #2c8fe6; -fx-background-radius: 20;" text="Reload" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <TextField fx:id="txtRoomId" layoutX="51.0" layoutY="524.0" promptText="Room Id" />
-      <ComboBox fx:id="cmbType" layoutX="51.0" layoutY="566.0" prefWidth="150.0" promptText="Type" />
-      <TextField fx:id="txtPrice" layoutX="51.0" layoutY="605.0" promptText="Price per night" />
-      <ComboBox fx:id="cmbMaxGuest" layoutX="216.0" layoutY="524.0" prefWidth="150.0" promptText="Max Guest" />
-      <Label layoutX="223.0" layoutY="570.0" prefHeight="18.0" prefWidth="81.0" text="Availability :">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="cmbFloor" layoutX="387.0" layoutY="523.0" prefWidth="150.0" promptText="Floor" />
-      <RadioButton fx:id="radioAvailable" layoutX="305.0" layoutY="570.0" mnemonicParsing="false" text="Available" />
-      <RadioButton fx:id="radioUnavailble" layoutX="387.0" layoutY="570.0" mnemonicParsing="false" text="Unavailble" />
-      <TextField fx:id="txtDescription" layoutX="216.0" layoutY="605.0" prefHeight="36.0" prefWidth="330.0" promptText="Description" />
-      <Button layoutX="607.0" layoutY="589.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #2c8fe6; -fx-background-radius: 20;" text="Delete" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button layoutX="745.0" layoutY="521.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #2c8fe6; -fx-background-radius: 20;" text="Update" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button layoutX="607.0" layoutY="521.0" mnemonicParsing="false" onAction="#btnAddOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #2c8fe6; -fx-background-radius: 20;" text="Add" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-   </children>
+<AnchorPane prefHeight="686.0" prefWidth="901.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RoomInfoFormController">
+    <children>
+        <Label alignment="CENTER" layoutX="224.0" layoutY="36.0" prefHeight="50.0" prefWidth="454.0" text="Room Information" textFill="#2c8fe6" AnchorPane.leftAnchor="224.0" AnchorPane.rightAnchor="223.0" AnchorPane.topAnchor="36.0">
+            <font>
+                <Font name="System Bold" size="34.0" />
+            </font>
+        </Label>
+
+        <TableView fx:id="tblRoomInfo" layoutX="51.0" layoutY="120.0" prefHeight="371.0" prefWidth="822.0" AnchorPane.bottomAnchor="190.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="120.0">
+            <columns>
+                <TableColumn fx:id="colRoomId" prefWidth="75.0" text="Room Id" />
+                <TableColumn fx:id="colType" prefWidth="93.5999984741211" text="Type" />
+                <TableColumn fx:id="colPrice" prefWidth="124.79998779296875" text="Price Per Night" />
+                <TableColumn fx:id="colGuest" prefWidth="132.79998779296875" text="Max Guest" />
+                <TableColumn fx:id="colAvailability" prefWidth="120.80001831054688" text="Availability" />
+                <TableColumn fx:id="colDescription" prefWidth="144.79998779296875" text="Description" />
+                <TableColumn fx:id="colFloor" prefWidth="131.20001220703125" text="Floor" />
+            </columns>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+        </TableView>
+
+        <TitledPane animated="false" collapsible="false" text="Room Details" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="50.0">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="130.0" prefWidth="540.0">
+                    <children>
+                        <TextField fx:id="txtRoomId" layoutX="14.0" layoutY="14.0" promptText="Room Id" />
+                        <ComboBox fx:id="cmbType" layoutX="14.0" layoutY="54.0" prefWidth="150.0" promptText="Type" />
+                        <TextField fx:id="txtPrice" layoutX="14.0" layoutY="93.0" promptText="Price per night" />
+
+                        <ComboBox fx:id="cmbMaxGuest" layoutX="180.0" layoutY="14.0" prefWidth="150.0" promptText="Max Guest" />
+                        <Label layoutX="180.0" layoutY="58.0" text="Availability :">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+                        <RadioButton fx:id="radioAvailable" layoutX="260.0" layoutY="58.0" mnemonicParsing="false" text="Available" />
+                        <RadioButton fx:id="radioUnavailble" layoutX="340.0" layoutY="58.0" mnemonicParsing="false" text="Unavailble" />
+                        <TextField fx:id="txtDescription" layoutX="180.0" layoutY="93.0" prefHeight="25.0" prefWidth="346.0" promptText="Description" />
+
+                        <ComboBox fx:id="cmbFloor" layoutX="350.0" layoutY="14.0" prefWidth="176.0" promptText="Floor" />
+                    </children>
+                </AnchorPane>
+            </content>
+            <font>
+                <Font name="System Bold" size="12.0" />
+            </font>
+        </TitledPane>
+
+        <AnchorPane layoutX="600.0" layoutY="520.0" prefHeight="100.0" prefWidth="250.0" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="50.0">
+            <children>
+                <Button layoutX="138.0" layoutY="68.0" mnemonicParsing="false" onAction="#btnReloadOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #2c8fe6; -fx-background-radius: 20;" text="Reload" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="15.0" />
+                    </font>
+                </Button>
+                <Button layoutY="68.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #2c8fe6; -fx-background-radius: 20;" text="Delete" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="15.0" />
+                    </font>
+                </Button>
+                <Button layoutX="138.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #2c8fe6; -fx-background-radius: 20;" text="Update" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="15.0" />
+                    </font>
+                </Button>
+                <Button mnemonicParsing="false" onAction="#btnAddOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #2c8fe6; -fx-background-radius: 20;" text="Add" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold" size="15.0" />
+                    </font>
+                </Button>
+            </children>
+        </AnchorPane>
+    </children>
 </AnchorPane>
